--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-    "name": "xuriga",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-
-    "scripts": {
-	"dev": "node server.js",
-	"build": "next build",
-	"start": "NODE_ENV=production node server.js",
-	"export": "npm run build && next export"
-
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-	"@babel/core": "^7.10.3",
-	"dotenv": "^8.2.0",
-	"express": "^4.17.1",
-	"next": "^9.4.4",
-	"pg": "^8.2.1",
-	"react": "^16.13.1",
-	"react-dom": "^16.13.1",
-	"react-router-dom": "^5.2.0"
-    }
+  "name": "xuriga",
+  "version": "1.0.0",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "next": "^9.4.4",
+    "pg": "^8.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
